--- a/the-todo-app/src/styles/header.css
+++ b/the-todo-app/src/styles/header.css
@@ -30,3 +30,9 @@
 .header-create-new-btn {
   font-size: 24px;
 }
+
+.user-name-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
