--- a/the-todo-app/src/styles/header.css
+++ b/the-todo-app/src/styles/header.css
@@ -36,3 +36,9 @@
   justify-content: center;
   align-items: center;
 }
+
+.header-btn-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
