--- a/the-todo-app/src/styles/createNewTodo.css
+++ b/the-todo-app/src/styles/createNewTodo.css
@@ -11,7 +11,7 @@ label {
 
 .create-new-container {
   width: 600px;
-  height: 400px;
+  height: 450px;
 
   border: 1px solid black;
   border-radius: 24px;
@@ -30,7 +30,7 @@ label {
 
   gap: 48px;
 
-  height: 40%;
+  height: 20%;
 }
 
 .create-new-title-container {
@@ -81,4 +81,16 @@ label {
 .create-new-submit-btn:hover,
 .create-new-submit-btn:active {
   background-image: linear-gradient(rgba(0, 0, 0, 0.198) 0 0);
+}
+
+.create-new-checkbox-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+
+.create-new-checkbox {
+  height: 48px;
+  width: 20px;
 }
