--- a/the-todo-app/src/index.css
+++ b/the-todo-app/src/index.css
@@ -1,16 +1,13 @@
 body {
-  margin: auto;
-  padding: 0;
-  width: 1200px;
-  font-family: sans-serif;
-  background-color: #424242;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.btn {
-  border: none;
-  cursor: pointer;
-}
-
-.btn:hover {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.198) 0 0);
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
