--- a/the-todo-app/src/index.css
+++ b/the-todo-app/src/index.css
@@ -1,13 +1,19 @@
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.box-shadow {
+  box-shadow: 2px 12px 24px rgba(0, 0, 0, 0.294);
+}
+
+.btn {
+  cursor: pointer;
+  text-decoration: none;
+  border: none;
+  border-radius: 9px;
+  background-color: #fbff00;
 }
