--- a/the-todo-app/src/index.css
+++ b/the-todo-app/src/index.css
@@ -1,9 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family:  'Rubik', sans-serif, "Comic Sans MS";
 }
 
 .box-shadow {
@@ -16,4 +13,8 @@ body {
   border: none;
   border-radius: 9px;
   background-color: #fbff00;
+}
+
+.display-none{
+  display: none;
 }
