--- a/book-keeper-app/src/index.css
+++ b/book-keeper-app/src/index.css
@@ -1,6 +1,5 @@
 body {
-  margin: auto;
-  width: 1200px;
+  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,10 +10,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.btn {
-  cursor: pointer;
-  outline: none;
-  border: none;
 }
