--- a/book-keeper-app/src/styles/bookList.css
+++ b/book-keeper-app/src/styles/bookList.css
@@ -8,8 +8,9 @@
 
 .books-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   padding: 8px;
+  gap: 48px;
   margin-top: 48px;
 }
 
@@ -19,7 +20,7 @@
   justify-content: center;
   align-items: center;
   gap: 16px;
-  padding: 16px;
+  padding: 8px;
 }
 
 .book-content-container {
@@ -30,7 +31,8 @@
 }
 
 .book-img {
-  width: 250px;
+  width: 200px;
+  height: 300px;
 }
 
 .book-progress-bar {
@@ -66,6 +68,7 @@
 .add-completed-pages-btn,
 .edit-book-btn {
   font-size: 12px;
+  width: 100%;
   background-color: #0d71bb;
 }
 
