--- a/book-keeper-app/src/styles/index.css
+++ b/book-keeper-app/src/styles/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  z-index: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,7 +12,7 @@ body {
 .centered-page {
   margin-left: auto;
   margin-right: auto;
-  width: 1200px;
+  width: 1400px;
 }
 
 .btn {
