--- a/book-keeper-app/src/styles/bookList.css
+++ b/book-keeper-app/src/styles/bookList.css
@@ -26,7 +26,7 @@
 .book-content-container {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 8px;
   width: 62.5%;
 }
 
@@ -52,7 +52,12 @@
 
 .book-progress {
   color: white;
-  padding-left: 8px;
+  padding-left: 4px;
+}
+
+.book-author {
+  max-height: 88px;
+  overflow-y: auto;
 }
 
 .book-functions-container {
@@ -76,4 +81,34 @@
   font-size: 12px;
   background-color: red;
   width: 62.5%;
+}
+
+.pages-completed-input-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+
+  margin: 16px 8px 0 0;
+}
+
+.pages-completed-input {
+  height: 32px;
+  font-size: 20px;
+  width: 56px;
+  padding: 4px;
+}
+
+.page-count-btn {
+  background-color: #0d71bb;
+  width: 64px;
+  font-size: 16px;
+  padding: 8px 8px;
+  margin-right: 8px;
+}
+
+.page-count-cancel-btn {
+  background-color: red;
+  font-size: 16px;
 }
