--- a/the-todo-app/src/styles/Dashboard.css
+++ b/the-todo-app/src/styles/Dashboard.css
@@ -4,14 +4,15 @@
   width: 1400px;
   height: 1000px;
 
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
   border-radius: 9px;
 
-  box-shadow: 1px 24px 12px rgba(0,0,0, 0.5);
+  /* box-shadow: 1px 24px 12px rgba(0, 0, 0, 0.5); */
 }
 
 .dashboard-title {
   text-align: center;
+  margin-top: 128px;
 }
 
 .add-new-btn {
@@ -54,7 +55,7 @@
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
-  max-height: 680px;
+  height: 700px;
   padding-bottom: 32px;
   margin-top: 40px;
 }
@@ -63,8 +64,8 @@
 .active-todo-list {
   border: 1px solid #ccc;
   border-radius: 11px;
-  width: 40%;
-  max-height: 625px;
+  width: 45%;
+  max-height: 650px;
 
   overflow-y: auto;
 }
@@ -73,4 +74,22 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width: 700px) {
+  .lists-container {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+  }
+
+  .completed-todo-list,
+  .active-todo-list {
+    width: 95%;
+  }
+
+  .todo-list-title {
+    grid-column: span(1);
+  }
 }
