--- a/the-todo-app/src/styles/Header.css
+++ b/the-todo-app/src/styles/Header.css
@@ -1,6 +1,12 @@
 .header-container {
   border-bottom: 1px solid #ccc;
-  margin: 8px 16px;
+  padding: 8px;
+  height: 48px;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 
   display: flex;
   justify-content: center;
@@ -12,4 +18,10 @@
 .header-title {
   text-align: center;
   font-size: 48px;
+}
+
+@media (max-width: 1200px) {
+  .header-container {
+    width: 100%;
+  }
 }
