--- a/the-todo-app/src/index.css
+++ b/the-todo-app/src/index.css
@@ -2,11 +2,12 @@ body {
   margin: 0;
   /* min-width: fit-content; */
 
-  font-family: 'Rubik', sans-serif, 'Comic Sans MS';
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
 }
 
 .box-shadow {
-  box-shadow: 2px 12px 24px rgba(0, 0, 0, 0.294);
+  box-shadow: 2px 12px 24px rgba(0, 0, 0, 0.2);
 }
 
 .btn {
