--- a/the-todo-app/src/styles/CreateTodo.css
+++ b/the-todo-app/src/styles/CreateTodo.css
@@ -1,10 +1,27 @@
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.85);
+}
+
+.modal {
+  position: fixed;
+  background: white;
+  height: auto;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .create-todo-container {
   display: flex;
   justify-content: center;
   align-items: center;
 
   margin: 24px;
-
 }
 
 .create-new-todo-input-container {
@@ -16,7 +33,7 @@
 
   border: 1px solid #ccc;
   width: 400px;
-  height: 120px;
+  height: 180px;
   padding: 16px;
 }
 
