--- a/the-todo-app/src/styles/Dashboard.css
+++ b/the-todo-app/src/styles/Dashboard.css
@@ -17,7 +17,7 @@
 
 .add-new-btn {
   border: none;
-  font-size: 24px;
+  font-size: 40px;
 }
 
 .search-todos-btn {
@@ -26,7 +26,7 @@
 
 .todo-functions-placeholder {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
 }
 
@@ -79,9 +79,11 @@
 @media (max-width: 700px) {
   .lists-container {
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
+    height: 100%;
+    gap: 72px;
   }
 
   .completed-todo-list,
@@ -91,5 +93,15 @@
 
   .todo-list-title {
     grid-column: span(1);
+  }
+}
+
+@media (max-width: 300px) {
+  .lists-container {
+  }
+
+  .completed-todo-list,
+  .active-todo-list {
+    width: 20%;
   }
 }
