--- a/the-todo-app/src/styles/TodoList.css
+++ b/the-todo-app/src/styles/TodoList.css
@@ -1,11 +1,18 @@
+.todo-list-title-container {
+  position: sticky;
+  top: 0;
+}
+
 .todo-list-title {
   margin: 0;
-  padding: 8px;
+  padding: 8px 8px;
 
   text-align: center;
+  font-size: 40px;
   border-bottom: 1px solid #ccc;
 
   background-color: #fbff00;
 
   position: static;
+  height: 48px;
 }
