--- a/The-Todo-App-TS/client/src/Styles/App.css
+++ b/The-Todo-App-TS/client/src/Styles/App.css
@@ -1,4 +1,15 @@
-.todo-lists-container{
-    display: flex;
-    margin-top: 2rem;
+.todo-lists-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 2rem;
+  box-sizing: border-box;
+  margin-right: 0;
+}
+
+.todo-lists-holder {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
 }
