--- a/The-Todo-App-TS/client/src/Styles/TodoCard.css
+++ b/The-Todo-App-TS/client/src/Styles/TodoCard.css
@@ -58,7 +58,6 @@
 
   .todo-title {
     margin-bottom: 1rem;
-    font-size: 1.75rem;
     height: 2.5rem;
   }
 }
@@ -76,11 +75,55 @@
 
 @media (max-width: 1001px) {
   .todo-card {
-    min-height: 8rem;
+    min-height: 6rem;
+  }
+
+  .todo-title {
+    margin-bottom: 0;
+    font-size: 1.75rem;
+    height: 2.5rem;
   }
 
   .todo-btn:last-child {
-    font-size: 1rem;
     height: 1.75rem;
+  }
+}
+
+@media (max-width: 601px) {
+  .todo-card {
+    min-height: 3rem;
+    width: 100%;
+  }
+
+  .todo-title {
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 481px) {
+  .todo-card {
+    min-height: 5rem;
+    min-width: 100%;
+    padding: 0.25rem;
+  }
+
+  .todo-title {
+    margin-bottom: 0;
+  }
+
+  .todo-title {
+    font-size: 1.5rem;
+  }
+
+  .todo-btn {
+    height: 1.5rem;
+    font-size: 1.15rem;
+    justify-content: space-evenly;
+    align-items: flex-start;
+  }
+}
+
+@media (max-width: 400px) {
+  .todo-buttons {
   }
 }
