--- a/The-Weather-App/client/src/Styles/NavBar.css
+++ b/The-Weather-App/client/src/Styles/NavBar.css
@@ -4,7 +4,7 @@
 
 .page-title-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 
