--- a/The-Weather-App/client/src/Styles/WeatherCardHolder.css
+++ b/The-Weather-App/client/src/Styles/WeatherCardHolder.css
@@ -1,7 +1,7 @@
 .weather-card-holder-container {
   height: 45vh;
   border-radius: 15px;
-  margin-top: 12rem;
+  margin-top: 8rem;
   box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.55);
   background-color: #fff;
 }
@@ -11,11 +11,13 @@
 
   display: flex;
   flex-direction: column;
+  gap: 3rem;
 }
 
 .weather-card-holder-title {
   color: #000;
   font-size: 1.75rem;
+  text-align: center;
 }
 
 .weather-card-holder-cards {
