--- a/The-Weather-App/client/src/Styles/WeatherDisplayHeading.css
+++ b/The-Weather-App/client/src/Styles/WeatherDisplayHeading.css
@@ -1,7 +1,9 @@
 .weather-display-heading-container {
   display: flex;
+  justify-content: space-around;
   align-items: center;
   margin-top: 10rem;
+  gap: 2rem;
 }
 
 .display-date-container {
@@ -13,9 +15,29 @@
 }
 
 .display-date {
-  font-size: 2.5rem;
+  font-size: 3rem;
 }
 
 .display-city {
   font-size: 1.5rem;
+}
+
+.display-img-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.weather-display-heading-img {
+  width: 15rem;
+  height: 15rem;
+}
+
+.display-condition {
+  font-size: 2rem;
+  font-weight: normal;
+}
+
+.today-weather {
+  font-size: 8rem;
 }
