--- a/The-Weather-App/client/src/Styles/index.css
+++ b/The-Weather-App/client/src/Styles/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
 body {
   margin: 0 auto;
   width: 100rem;
@@ -17,6 +19,7 @@ body {
 
 * {
   margin: 0;
+  font-family: Nunito, Verdana, Geneva, Tahoma, sans-serif;
 }
 
 code {
